--- a/app/src/main/res/layout/modulousuario.xml
+++ b/app/src/main/res/layout/modulousuario.xml
@@ -33,7 +33,7 @@
         android:visibility="invisible" />
 
     <Button
-        android:id="@+id/button2"
+        android:id="@+id/botontest"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="30"
