mostrar preguntas y respuestas

--- a/app/src/main/res/layout/fragment_test.xml
+++ b/app/src/main/res/layout/fragment_test.xml
@@ -7,15 +7,17 @@
     tools:context=".usuarios.test">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/respuestas"
         android:layout_width="267dp"
         android:layout_height="405dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        tools:listitem="@layout/preguntas" />
+        app:layout_constraintTop_toBottomOf="@+id/preguntas"
+        tools:listitem="@layout/respuestas" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/preguntas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="212dp"
