--- a/app/src/main/res/layout/fragment_itempregunta.xml
+++ b/app/src/main/res/layout/fragment_itempregunta.xml
@@ -8,15 +8,17 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:id="@+id/pregunta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="216dp"
+        android:layout_height="50dp"
+        android:gravity="center"
         android:text="@string/hello_blank_fragment" />
 
     <TextView
         android:id="@+id/modulopregunta"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_weight="1"
+        android:gravity="center"
         android:text="TextView" />
 
 </LinearLayout>
