--- a/app/src/main/res/layout-land/fragment_test.xml
+++ b/app/src/main/res/layout-land/fragment_test.xml
@@ -2,33 +2,27 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/frameLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".usuarios.selectormodulos">
-
-    <!-- TODO: Update blank fragment layout -->
+    tools:context=".usuarios.test">
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/listamodulos"
+        android:id="@+id/respuestas"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_margin="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/minivel"
-        tools:layout_conversion_absoluteHeight="0dp"
-        tools:layout_conversion_absoluteWidth="409dp"
-        tools:listitem="@layout/modulousuario" />
+        app:layout_constraintStart_toEndOf="@+id/preguntas"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/respuestas" />
 
     <TextView
-        android:id="@+id/minivel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/preguntas"
+        android:layout_width="293dp"
+        android:layout_height="138dp"
+        android:gravity="center"
         android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
