--- a/app/src/main/res/layout/fragment_administradormodulos.xml
+++ b/app/src/main/res/layout/fragment_administradormodulos.xml
@@ -25,6 +25,7 @@
         android:ems="10"
         android:hint="url de la lista de reproducion"
         android:inputType="textPersonName"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/modulo" />
@@ -36,6 +37,7 @@
         android:ems="10"
         android:hint="nivel del modulo"
         android:inputType="number"
+        android:minHeight="48dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/url" />
