--- a/app/src/main/res/layout/fragment_administradorpreguntas.xml
+++ b/app/src/main/res/layout/fragment_administradorpreguntas.xml
@@ -14,60 +14,60 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/insertar"
+        app:layout_constraintTop_toBottomOf="@+id/filtro"
         tools:listitem="@layout/fragment_itempregunta" />
 
     <Spinner
         android:id="@+id/modulos"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
-        app:layout_constraintEnd_toEndOf="@+id/respuesta3"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/respuesta3"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
         tools:listitem="@layout/moduloadministrador" />
 
     <EditText
         android:id="@+id/pregunta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="0dp"
+        android:layout_height="150dp"
         android:ems="10"
         android:hint="pregunta"
-        android:inputType="textPersonName"
+        android:inputType="text|textMultiLine"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/respuestacorrecta"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="respuestacorrecta"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/pregunta"
-        app:layout_constraintStart_toStartOf="@+id/pregunta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/pregunta" />
 
     <EditText
         android:id="@+id/respuesta2"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="respuesta2"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/respuestacorrecta"
-        app:layout_constraintStart_toStartOf="@+id/respuestacorrecta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/respuestacorrecta" />
 
     <EditText
         android:id="@+id/respuesta3"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:ems="10"
         android:hint="respuesta3"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/respuesta2"
-        app:layout_constraintStart_toStartOf="@+id/respuesta2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/respuesta2" />
 
     <Spinner
@@ -75,16 +75,32 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/modulos"
-        app:layout_constraintTop_toTopOf="@+id/modulos" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <Button
         android:id="@+id/insertar"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
+        android:layout_height="48dp"
+        android:text="crear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/modulos" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="modulo"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/respuesta3" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="filtro"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/insertar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
