--- a/app/src/main/res/layout/modulousuario.xml
+++ b/app/src/main/res/layout/modulousuario.xml
@@ -15,6 +15,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="30"
+        android:gravity="center"
         android:textSize="24sp" />
 
     <TextView
@@ -22,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="20"
+        android:gravity="center"
         android:textSize="24sp" />
 
     <TextView
